all-manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-nginx
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-nginx
  template:
    metadata:
      labels:
        app: simple-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:stable
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-html
        configMap:
          name: nginx-config
          items:
          - key: index.html
            path: index.html
---
apiVersion: v1
kind: Service
metadata:
  name: simple-nginx
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: simple-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-httpd
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-httpd
  template:
    metadata:
      labels:
        app: simple-httpd
    spec:
      containers:
      - name: httpd
        image: httpd:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: httpd-html
          mountPath: /usr/local/apache2/htdocs
      volumes:
      - name: httpd-html
        configMap:
          name: httpd-config
          items:
          - key: index.html
            path: index.html
---
apiVersion: v1
kind: Service
metadata:
  name: simple-httpd
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: simple-httpd
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: nginx.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-nginx
            port:
              number: 80
  - host: httpd.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-httpd
            port:
              number: 80
